[metadata]
name = TraceNinja
version = 1.0.2
author = Mohamed
description = TraceNinja is a subdomain enumeration tool for Python that allows you to enumerate domains and gather information about them. And much much more on the future ^_^. It's currently under development.
license = MIT
home-page = https://github.com/mohdh34m/TraceNinja